--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,5 +12,8 @@
 </head>
 <body>
   <h1>Hello, {{ user.username }}</h1>
+  {% for post in posts%}
+  <p>{{ post.author.username }} says: <strong>{{ post.body }}</strong></p>
+  {% endfor %}
 </body>
 </html>
