--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {% if title %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge"> {% if title %}
   <title>{{ title }} - Microblog</title>
   {% else %}
   <title>Welcome to Microblog!</title>
   {% endif %}
 </head>
+
 <body>
-  <div>Microblog: <a href="./index">Home</a></div>
-  {% block content %}
-  {% endblock %}
+  <div>Microblog:
+    <a href="./index">Home</a>
+    <a href="./login">Login</a>
+  </div>
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}
+  {% endwith %}
+  {% block content %} {% endblock %}
 </body>
+
 </html>
