--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,11 +4,16 @@
   {{ form.hidden_tag() }}
   <p>
     {{ form.username.label }}
-    <br> {{ form.username(size=32) }}
+    <br> {{ form.username(size=32) }} {% for error in form.username.errors %}
+    <span>{{error}}</span>
+    {% endfor %}
   </p>
   <p>
     {{ form.password.label }}
     <br> {{ form.password(size=32) }}
+    {% for error in form.password.errors %}
+    <span>{{error}}</span>
+    {% endfor %}
   </p>
   <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
   <p>{{ form.submit() }}</p>
